Added tw divs, a for loop, and a few var's

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
             <h5 id="time">60</h5>
         </div>
     </header>
+    <div id = "questions"></div>
+    <div id = "answers"></div>
     <button id="start">Start</button>
     <script src="./assets/script.js"></script>
 </body>
