added new html and js files and code inside them

--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
     </header>
     <div id = "questions"></div>
     <div id = "answers"></div>
+    <div class = "hide" id = "nameForm">
+        <input id="input" type="text">
+        <button id="submitBtn">submit</button>
+    </div>
     <button id="start">Start</button>
     <script src="./assets/script.js"></script>
 </body>
